--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -28,7 +28,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
-          source: "deploy/docker-compose.yaml,deploy/data/apache_logs.txt"
+          source: "deploy/docker-compose.yaml"
           target: "flask-app"
           strip_components: 1
       - name: run docker-compose
