--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -1,8 +1,8 @@
-version: "3.9"
+version: "3.3"
 services:
   api:
     image: samischikhin/flask-app:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     ports:
     - 8000:80
     volumes:
-      - ./data/apache_logs.txt:/code/data/apache_logs.txt
+      - ./data/apache_logs.txt:/code/data/apache_logs.txt:ro
