--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,3 +1,49 @@
+
+This site has been acquired by Toptal
+(Attention! API endpoint has changed)
+Save New Duplicate & Edit Just Text1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+11
+12
+13
+14
+15
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+26
+27
+28
+29
+30
+31
+32
+33
+34
+35
+36
+37
+38
+39
+40
+41
+42
+43
 name: Build and deploy action
 on: [push]
 jobs:
@@ -20,15 +66,16 @@ jobs:
         uses: actions/checkout@v2
       - name: render configs
         run: |
-          mkdir deploy
+          mkdir -p deploy/data
           cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
+          cp data/apache_logs.txt deploy/data/apache_logs.txt
       - name: clone files to server
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
-          source: "deploy/docker-compose.yaml"
+          source: "deploy/docker-compose.yaml,deploy/data/apache_logs.txt"
           target: "flask-app"
           strip_components: 1
       - name: run docker-compose
