--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,7 +31,7 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           source: "deploy/docker-compose.yaml,deploy/data/apache_logs.txt"
           target: "flask-app"
-          owerwrite: true
+          overwrite: true
           strip_components: 1
       - name: run docker-compose
         uses: appleboy/ssh-action@master
